# vertabrae_cls

./: .gitignore  404.html  LICENSE  Makefile  README.md  index.html  objects.inv  pyproject.toml  requirements.txt  sweep_id.txt
code/data_preparation/: index.html
code/inference/: index.html
code/modeling/: index.html
code/training/: index.html
commands/: index.html
configs/: binary_eval.yaml
docs/: mkdocs.yml
docs/docs/: commands.md  getting-started.md  index.md
docs/docs/code/: data_preparation.md  inference.md  modeling.md  training.md
getting-started/: index.html
notebooks/: dataset_size_metrics.ipynb  modeling.ipynb  raport_eda.ipynb  seg.ipynb  tensor_inspect.ipynb  transforms.ipynb
search/: search_index.json
src/: config.py  dataset-size_experiment.py  evaluate_binary.py  main.py  utils.py
src/data_utils/: XLSExtractor.py  dataloader.py  dataset_balancer.py  dataset_creator.py  dicom_reader.py  vertabra_extractor.py  vertebra_extractor.py  vertebrae_dataset.py
src/inference/: api.py  app.py  predictor.py
src/modeling/: base_model.py  med3_transfer.py  model_factory.py  monai_resnet.py  resnet3d.py
src/training/: engine.py  sweep_runner.py  train.py  train_config.yaml
