[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = "Classifier of Vertebrae injuries."
authors = [
  { name = "Mateusz Ostaszewski" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "huggingface-hub>=0.31.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.2",
    "matplotlib>=3.10.1",
    "mkdocs-material>=9.6.14",
    "mkdocstrings[python]>=0.29.1",
    "monai[all]>=1.4.0",
    "natsort>=8.4.0",
    "nibabel>=5.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pynrrd>=1.1.3",
    "seaborn>=0.13.2",
    "simpleitk>=2.5.0",
    "slicer>=0.0.8",
    "torch>=2.7.0",
]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["src"]
force_sort_within_sections = true
